--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,9 +27,9 @@ body {
     // z-index: -99;
     background-image: url("../assets/images/home-bg.svg");
     background-repeat: no-repeat;
-    background-size: cover;
-    width: 500px;
-    height: 500px;
+    background-size: contain;
+    width: 100%;
+    height: 100%;
     /* Add the blur effect */
 
     display: block;
